@@ -3,6 +3,7 @@
 ** Unreleased
 
 *** Added:
+  - /Language Server Protocol/ (LSP) client =eglot=.
   - Enable =company-mode= completions.
   - =ELisp= configuration file.
   - Auto-mode for =XML= and =YAML=.
